fixed image issues, css for navigation button visibility

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -47,6 +47,14 @@ input[type='number'] {
   transition: background-color 0.3s, transform 0.3s;
   cursor: pointer;
   opacity: 50%;
+  width: 30px;
+  height: 30px;
+  display: none !important;
+}
+
+.custom-swiper-button svg {
+  width: 16px; 
+  height: 16px; 
 }
 
 .custom-swiper-button:hover {
